--- a/Breakout/2D/Menu/LevelsMenu/LevelsMenuViewCell/LevelsMenuCollectionViewCell.xib
+++ b/Breakout/2D/Menu/LevelsMenu/LevelsMenuViewCell/LevelsMenuCollectionViewCell.xib
@@ -23,13 +23,13 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Kns-Xe-LV2">
-                        <rect key="frame" x="15" y="67.666666666666671" width="86" height="34.333333333333329"/>
+                        <rect key="frame" x="15" y="68" width="86" height="34"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="Kns-Xe-LV2" secondAttribute="height" multiplier="107:40" constant="-5.6499999999999915" id="JTh-yn-Mvo"/>
+                            <constraint firstAttribute="width" secondItem="Kns-Xe-LV2" secondAttribute="height" multiplier="107:40" constant="-5" id="JTh-yn-Mvo"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="40" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hVj-we-95H" userLabel="LevelNumber">
-                        <rect key="frame" x="-6.6666666666666643" y="17.999999999999996" width="129.33333333333334" height="54.666666666666657"/>
+                        <rect key="frame" x="-6.6666666666666643" y="18" width="129.33333333333337" height="55"/>
                         <fontDescription key="fontDescription" name="Bungee-Regular" family="Bungee" pointSize="100"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
