--- a/Breakout/3DAR/Menu/ARLevelsMenu/ARLevelsMenuViewCell/ARLevelsMenuCollectionViewCell.xib
+++ b/Breakout/3DAR/Menu/ARLevelsMenu/ARLevelsMenuViewCell/ARLevelsMenuCollectionViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -22,8 +22,14 @@
                 <rect key="frame" x="0.0" y="0.0" width="116" height="114"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xrm-cj-4QL">
+                        <rect key="frame" x="15" y="70" width="86" height="32"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="xrm-cj-4QL" secondAttribute="height" multiplier="107:40" id="766-vq-7He"/>
+                        </constraints>
+                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="40" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NOm-xO-mz5" userLabel="LevelNumber">
-                        <rect key="frame" x="5" y="5" width="106" height="104"/>
+                        <rect key="frame" x="-6.6666666666666643" y="18" width="129.33333333333334" height="57"/>
                         <fontDescription key="fontDescription" name="Bungee-Regular" family="Bungee" pointSize="100"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
@@ -34,14 +40,17 @@
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="NOm-xO-mz5" secondAttribute="bottom" constant="5" id="4rO-bz-LAY"/>
-                <constraint firstItem="NOm-xO-mz5" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="FBB-Ik-Itk"/>
-                <constraint firstAttribute="trailing" secondItem="NOm-xO-mz5" secondAttribute="trailing" constant="5" id="NeG-rj-7oi"/>
-                <constraint firstItem="NOm-xO-mz5" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="ggg-9O-V7d"/>
+                <constraint firstAttribute="trailing" secondItem="xrm-cj-4QL" secondAttribute="trailing" constant="15" id="DU5-pO-IJY"/>
+                <constraint firstItem="NOm-xO-mz5" firstAttribute="centerX" secondItem="ZTg-uK-7eu" secondAttribute="centerX" id="LR6-Ig-JUs"/>
+                <constraint firstItem="NOm-xO-mz5" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="18" id="XL1-rO-sla"/>
+                <constraint firstAttribute="bottom" secondItem="xrm-cj-4QL" secondAttribute="bottom" constant="12" id="Xe6-rO-kJO"/>
+                <constraint firstItem="xrm-cj-4QL" firstAttribute="top" secondItem="NOm-xO-mz5" secondAttribute="bottom" constant="-5" id="mXj-Lq-aqW"/>
+                <constraint firstItem="xrm-cj-4QL" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="15" id="tTZ-k4-HvT"/>
             </constraints>
             <size key="customSize" width="96" height="122"/>
             <connections>
                 <outlet property="levelNumber" destination="NOm-xO-mz5" id="VOb-zN-JLA"/>
+                <outlet property="starImageView" destination="xrm-cj-4QL" id="WzE-ck-jOK"/>
             </connections>
             <point key="canvasLocation" x="170.99236641221373" y="45.070422535211272"/>
         </collectionViewCell>
